# ccatch

./: .travis.yml  CCatchConfig.cmake  CMakeLists.txt  FindCCatch.cmake  LICENSE  README.md  conanfile.py  package.json
include/: ccatch.h  ccatch_common.h  ccatch_scope.h  ccatch_with_main.h
tests/: ccatch_test.c  ccatch_without_main.c
